<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nope"
    android:orientation="vertical"
    tools:context=".mainTabs.fragments.BMIFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_your_weight"
                android:textColor="@color/black"

                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/edittextWeightBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/enter_weight_here"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black"


                    />


                <Spinner
                    android:id="@+id/spinnerWeightBMI"
                    android:layout_width="wrap_content"

                    android:layout_height="@dimen/_40sdp"
                    android:contentDescription="@string/choose_weight_parameter"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_your_height"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/edittextHeightBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/enter_height_here"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black" />

                <Spinner

                    android:id="@+id/spinnerHeightBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:contentDescription="@string/choose_height_parameter"
                    android:textAlignment="center" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/calaculateBMIButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/my_bmi"
                app:cornerRadius="@dimen/_10sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/BmiDisplayerCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                app:cardBackgroundColor="#D4DD79"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/BmiDisplayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/your_bmi"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"

                        />

                    <TextView
                        android:id="@+id/BmiStageDisplayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/bmistage"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>